<resources>
    <string name="app_name">知觅</string>

    <!--注册-->
    <string name="text_finish">完成</string>
    <string name="text_cancel">取消</string>
    <string name="text_confirm">确定</string>
    <string name="text_back">返回</string>
    <string name="text_save">保存</string>
    <string name="text_next">下一步</string>
    <string name="text_name">姓名</string>
    <string name="text_title">身份</string>
    <string name="text_watch">关注的人</string>
    <string name="text_location">附近达人</string>
    <string name="text_topic_details">匿题详情</string>
    <string name="text_mesage">消息通知</string>
    <string name="text_apply">私聊申请</string>
    <string name="text_find">查找朋友</string>
    <string name="text_all">全部</string>
    <string name="text_edit">编辑资料</string>
    <string name="text_setting">设置</string>
    <string name="text_tlak">私聊</string>
    <string name="text_thumb">赞</string>

    <!--主页底部导航-->
    <string name="topbar_title_main">主页</string>
    <string name="radio_dock_1">匿题</string>
    <string name="radio_dock_2">发现</string>
    <string name="radio_dock_3">私聊</string>
    <string name="radio_dock_4">我的</string>
    <string name="text_collect">收藏</string>
    <string name="text_share">分享</string>
    <string name="text_comment">评论</string>
    
    <string name="text_collect_answe">收藏的回答</string>
    <string name="text_draft">回答草稿</string>

    <string name="text_latest_topic">最新匿题</string>
    <string name="text_my_answer">我的回答</string>
    <string name="text_my_draft">我的草稿</string>
    <string name="text_my_collect">我的收藏</string>

    <string name="text_topic_feed">匿题动态</string>
    <string name="text_message_notification">消息通知</string>
    <string name="text_interaction">互动</string>
    <string name="text_nearby_talent">附近达人</string>

    <string name="text_watch_topic">关注的匿题</string>
    <string name="text_date_talent">我约的达人</string>
    <string name="text_my_order">我的订单</string>
    <string name="text_my_skill">擅长的技艺</string>
    <string name="text_account">账号与安全</string>
    <string name="text_black_list">黑名单</string>
    <string name="text_receive_message">接收新消息和通知</string>
    <string name="item_account">账号</string>
    
    <string name="action_add_skill">添加一项</string>
    <string name="action_watch">关注</string>
    <string name="action_exit">退出知觅</string>

    <!-- Strings related to login -->
    <string name="prompt_mobile_num">输入登录手机号</string>
    <string name="prompt_password">输入密码</string>
    <string name="prompt_code">请输入验证码</string>
    <string name="action_login">登录</string>
    <string name="action_login_loading">登录中...</string>
    <string name="action_register">立即加入</string>
    <string name="action_add">加入</string>
    <string name="action_forget"><u>忘记密码？</u></string>
    <string name="action_new_register">注册新用户</string>
    <string name="action_sign_in">使用手机号注册</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="login_error_phone_not_registered">手机号未注册</string>
    <string name="login_error_password_error">登录密码错误</string>
    <string name="login_error_phonenum_empty">手机号不能为空</string>
    <string name="login_error_name_empty">名字不能为空</string>
    <string name="login_error_title_empty">身份不能为空</string>
    <string name="login_error_password_empty">密码不能为空</string>

    <string name="login_phonenumber_hint">手机号码</string>
    <string name="login_phone_title">手机号</string>
    <string name="login_password_hint">知觅登录密码</string>
    <string name="login_findpassword">忘记密码?</string>

    <!-- Strings related to register -->
    <string name="register_password_hint">设置登录密码（请使用6-20个字符）</string>
    <string name="register_repeat_password">确认密码</string>
    <string name="register_get_validation_code">发送验证码</string>
    <string name="register_invitation_mobile">输入邀请人手机号(选填)</string>
    <string name="validation_code_null">请输入验证码</string>
    <string name="reget_validation_code">重新发送</string>
    <string name="register_agree">点击注册表示同意</string>
    <string name="register_protocal">《用户服务协议》</string>
    <string name="register_error_validation_code_get_failed">获取验证码失败，请重试</string>
    <string name="register_error_phone_already_registered">手机号已注册</string>
    <string name="register_error_phone_invalid">手机号不正确</string>
    <string name="register_error_password_invalid">密码不符合规范</string>
    <string name="register_error_password_length">密码长度不符合规范</string>
    <string name="register_error_password_repeat_wrong">重复输入密码不匹配</string>
    <string name="register_error_validation_code_wrong">验证码错误</string>
    <string name="validation_code_count_down">已发送(%ss)</string>
    
    
    <!--String related to change password -->
    <string name="changepassword_oldnumber_hint">输入旧密码</string>
    <string name="changepassword_newnumber_hint">修改密码（6-20位）</string>
    <string name="changepassword_repeat_newnumber_hint">确认密码</string>
    <string name="password_unmuch">前后输入的新密码不一致</string>
    <string name="change_password_word_title">修改密码</string>
    <string name="commit_change_password">提交修改</string>

    <!-- Strings related to find password -->
    <string name="find_password">密码找回</string>
    <string name="findPW_password">重设密码（6-20位）</string>
    <string name="findPW_reset_password">确认</string>
    <string name="findPW_loading">重设中，请稍后...</string>

    <string name="net_error">当前无网络连接，请检查您的网络设置</string>
    <string name="use_protocol">用户使用协议</string>


    <!-- loading -->
    <string name="loading">载入中</string>
    <!-- error -->
    <string name="error_hint">点击页面刷新</string>

</resources>
