<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_base"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include layout="@layout/top_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/top_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <com.cyou.ui.ClearableEditText
                        android:id="@+id/ev_phonenum"
                        style="@style/Login.EditText"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/login_phonenumber_hint"
                        android:inputType="number"
                        android:maxLength="11"
                        android:nextFocusDown="@+id/ev_validation_code" />

                    <TextView
                        android:id="@+id/tv_get_code"
                        style="@style/Login.Label"
                        android:layout_width="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="15dp"
                        android:text="@string/register_get_validation_code" />
                </LinearLayout>

                <View style="@style/Login.View" />

                <com.cyou.ui.ClearableEditText
                    android:id="@id/ev_validation_code"
                    style="@style/Login.EditText"
                    android:hint="@string/prompt_code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:nextFocusDown="@+id/ev_password"
                    android:singleLine="true" />

                <View style="@style/Login.View" />

                <com.cyou.ui.ClearableEditText
                    android:id="@id/ev_password"
                    style="@style/Login.EditText"
                    android:hint="@string/register_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:nextFocusDown="@+id/ev_password_repeat" />

                <View style="@style/Login.View" />

                <com.cyou.ui.ClearableEditText
                    android:id="@id/ev_password_repeat"
                    style="@style/Login.EditText"
                    android:hint="@string/register_repeat_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:nextFocusDown="@+id/ev_validation_code" />

                <!--<com.cyou.ui.ClearableEditText-->
                <!--style="@style/Login.EditText"-->
                <!--android:id="@+id/ev_invitation_mobile"-->
                <!--android:hint="@string/register_invitation_mobile"-->
                <!--android:inputType="number"-->
                <!--android:maxLength="11"-->
                <!--android:nextFocusDown="@+id/ev_validation_code" />-->

            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                style="@style/Login.Button"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/left_right_padding"
                android:text="@string/action_register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_right_padding"
                android:layout_marginRight="@dimen/left_right_padding"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_agree"
                    style="@style/Login.Label"
                    android:text="@string/register_agree"
                    android:textColor="@color/text_hint_color" />

                <TextView
                    android:id="@+id/tv_protocal"
                    style="@style/Login.Label"
                    android:text="@string/register_protocal" />

            </LinearLayout>

        </LinearLayout>

        <com.linjin.zhimi.widget.TopSnackBar
            android:id="@+id/topSnackBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>

</LinearLayout>



