<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_base"
    android:orientation="vertical"
    tools:context=".account.AccuntActivity">

    <include layout="@layout/top_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/top_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <com.cyou.ui.ClearableEditText
                    android:id="@+id/ev_phonenum"
                    style="@style/Login.EditText"
                    android:hint="@string/login_phonenumber_hint"
                    android:inputType="number"
                    android:maxLength="11" />

                <View style="@style/Login.View" />

                <com.cyou.ui.ClearableEditText
                    android:id="@+id/ev_password"
                    style="@style/Login.EditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="20" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/Login.Button"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/left_right_padding"
                android:text="@string/action_login" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_right_padding"
                android:layout_marginRight="@dimen/left_right_padding"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_register"
                    style="@style/Login.Label"
                    android:layout_gravity="left"
                    android:text="@string/action_register" />

                <TextView
                    android:id="@+id/tv_findpassword"
                    style="@style/Login.Label"
                    android:layout_gravity="right"
                    android:text="@string/login_findpassword" />
            </FrameLayout>


        </LinearLayout>

        <com.linjin.zhimi.widget.TopSnackBar
            android:id="@+id/topSnackBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
    </FrameLayout>

</LinearLayout>



