<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_base"
    android:orientation="vertical"
    tools:context=".account.AccuntActivity">

    <include layout="@layout/top_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/top_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/white">

                    <com.cyou.ui.ClearableEditText
                        android:id="@+id/ev_phonenum"
                        style="@style/Login.EditText"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/login_phonenumber_hint"
                        android:inputType="number"
                        android:maxLength="11"
                        android:nextFocusDown="@+id/ev_validation_code" />

                    <TextView
                        android:id="@+id/tv_get_code"
                        style="@style/Login.Label"
                        android:layout_width="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="15dp"
                        android:text="@string/register_get_validation_code" />
                </LinearLayout>

                <View style="@style/Login.View" />

                <com.cyou.ui.ClearableEditText
                    android:id="@+id/ev_validation_code"
                    style="@style/Login.EditText"
                    android:hint="@string/prompt_code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:nextFocusDown="@+id/ev_password"
                    android:singleLine="true" />

                <View style="@style/Login.View" />

                <com.cyou.ui.ClearableEditText
                    android:id="@+id/ev_password"
                    style="@style/Login.EditText"
                    android:hint="@string/findPW_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:nextFocusDown="@+id/ev_password_repeat" />

                <View style="@style/Login.View" />

                <com.cyou.ui.ClearableEditText
                    android:id="@+id/ev_password_repeat"
                    style="@style/Login.EditText"
                    android:hint="@string/register_repeat_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:nextFocusDown="@+id/ev_validation_code" />

                <Button
                    android:id="@+id/btn_reset_password"
                    style="@style/Login.Button"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/left_right_padding"
                    android:text="@string/findPW_reset_password" />

            </LinearLayout>

        </LinearLayout>

        <com.linjin.zhimi.widget.TopSnackBar
            android:id="@+id/topSnackBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

</LinearLayout>



