<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.linjin.zhimi.widget.TopActionBar
        android:id="@+id/topActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/enter_old_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="28dp"
            android:background="@color/bg_color"
            android:hint="@string/changepassword_oldnumber_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:textColorHint="@color/color_d2d2d2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/enter_new_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="18dp"
            android:background="@color/bg_color"
            android:hint="@string/changepassword_newnumber_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:textColorHint="@color/color_d2d2d2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/repeat_new_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="18dp"
            android:background="@color/bg_color"
            android:hint="@string/changepassword_repeat_newnumber_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:textColorHint="@color/color_d2d2d2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_password_state"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/register_error_password_invalid"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="@color/color_base"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="@string/commit_change_password" />


    </LinearLayout>
</LinearLayout>