<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_base"
    android:orientation="vertical">

    <com.linjin.zhimi.widget.TopActionBar
        android:id="@+id/topActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/item_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/Main.Item"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/text_account" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:src="@mipmap/cell_prev" />
    </LinearLayout>

    <View style="@style/Login.View" />

    <LinearLayout
        android:id="@+id/item_black_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"

        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/Main.Item"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/text_black_list" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:src="@mipmap/cell_prev" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/Main.Item"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/text_receive_message" />

        <com.cyou.ui.slideswitch.SlideSwitch
            android:id="@+id/switch_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        style="@style/Login.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/action_exit" />
</LinearLayout>