<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_bar_height"
    android:orientation="vertical"
    android:background="@color/color_base">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_line" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bottom_bar_bg"
        android:descendantFocusability="afterDescendants"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dock_thumb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/no_color"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@mipmap/ans1_5_off"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/text_thumb"
            android:textColor="@color/bottom_bar_text_color"
            android:textSize="@dimen/bottom_bar_text_size" />

        <TextView
            android:id="@+id/dock_collect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/no_color"
            android:button="@null"
            android:drawableTop="@mipmap/ans2_6_off"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/text_collect"
            android:textColor="@color/bottom_bar_text_color"
            android:textSize="@dimen/bottom_bar_text_size" />

        <TextView
            android:id="@+id/dock_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/no_color"
            android:button="@null"
            android:drawableTop="@mipmap/ans3_6"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/text_share"
            android:textColor="@color/bottom_bar_text_color"
            android:textSize="@dimen/bottom_bar_text_size" />

        <TextView
            android:id="@+id/dock_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/no_color"
            android:button="@null"
            android:drawableTop="@mipmap/ans4_6"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/text_comment"
            android:textColor="@color/bottom_bar_text_color"
            android:textSize="@dimen/bottom_bar_text_size" />

    </LinearLayout>
</LinearLayout>
